--- a/copy/gamesense.html
+++ b/copy/gamesense.html
@@ -4,95 +4,110 @@
   <meta charset="UTF-8" />
   <title>Gamesense HvH Config</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: "Inter", sans-serif;
-      background: #0a0a0a;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      height: 100vh;
+      background: #0d0d0d;
+      font-family: "Segoe UI", sans-serif;
       color: #eee;
       display: flex;
-      align-items: center;
       justify-content: center;
-      height: 100vh;
+      align-items: center;
+      backdrop-filter: blur(8px);
     }
 
     .box {
-      background: rgba(30, 30, 30, 0.75);
-      backdrop-filter: blur(8px);
-      padding: 2em 3em;
+      background: rgba(20, 20, 20, 0.85);
+      padding: 2rem 2.5rem;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 120, 0.1);
+      box-shadow: 0 0 20px rgba(0, 255, 120, 0.08);
       text-align: center;
       max-width: 90%;
     }
 
     h1 {
       font-size: 1.3rem;
-      margin-bottom: 1rem;
-      color: #0f0;
+      margin-bottom: 0.5rem;
     }
 
-    p {
-      font-size: 0.9rem;
+    .desc {
+      font-size: 0.95rem;
       opacity: 0.8;
       margin-bottom: 1.5rem;
     }
 
+    .status {
+      font-size: 0.9rem;
+      margin-top: 1rem;
+      min-height: 1.2em;
+    }
+
     button {
-      background-color: #0f0;
-      color: #000;
+      background: #0f0;
       border: none;
-      padding: 10px 20px;
+      color: #000;
+      padding: 0.6rem 1.5rem;
       font-size: 0.95rem;
+      font-weight: 600;
       border-radius: 8px;
       cursor: pointer;
-      transition: all 0.2s ease;
+      transition: background 0.2s ease;
     }
 
     button:hover {
-      background-color: #0c0;
+      background: #0c0;
     }
 
     .hidden {
       display: none;
     }
-
-    .status {
-      margin-top: 1rem;
-      font-size: 0.85rem;
-      color: #aaa;
-    }
   </style>
   <script>
-    async function fetchAndCopy(path) {
+    async function getText() {
+      const res = await fetch("../cfg/gamesense.txt");
+      if (!res.ok) throw new Error("Failed to fetch config");
+      return await res.text();
+    }
+
+    async function autoCopy() {
+      const status = document.getElementById("status");
       try {
-        const res = await fetch(path);
-        const text = await res.text();
+        const text = await getText();
         await navigator.clipboard.writeText(text);
-        document.getElementById("status").textContent = "✅ Config copied to clipboard";
+        status.textContent = "✅ Copied to clipboard!";
         setTimeout(() => window.close(), 1500);
-      } catch {
-        document.getElementById("status").textContent = "⚠️ Auto-copy blocked. Click the button below.";
+      } catch (e) {
+        status.textContent = "⚠️ Auto-copy failed. Click the button below.";
         document.getElementById("copyBtn").classList.remove("hidden");
       }
     }
 
-    async function manualCopy(path) {
-      const res = await fetch(path);
-      const text = await res.text();
-      await navigator.clipboard.writeText(text);
-      document.getElementById("status").textContent = "✅ Config copied!";
-      setTimeout(() => window.close(), 1500);
+    async function manualCopy() {
+      const status = document.getElementById("status");
+      try {
+        const text = await getText();
+        await navigator.clipboard.writeText(text);
+        status.textContent = "✅ Copied!";
+        setTimeout(() => window.close(), 1500);
+      } catch (e) {
+        status.textContent = "❌ Copy failed.";
+      }
     }
 
-    window.onload = () => fetchAndCopy("../cfg/gamesense.txt");
+    window.onload = autoCopy;
   </script>
 </head>
 <body>
   <div class="box">
     <h1>Gamesense HvH Config</h1>
-    <p>Config for Unmatched.gg</p>
-    <button id="copyBtn" class="hidden" onclick="manualCopy('../cfg/gamesense.txt')">Copy</button>
-    <div id="status" class="status">Trying to copy...</div>
+    <div class="desc">Config for Unmatched.gg</div>
+    <button id="copyBtn" class="hidden" onclick="manualCopy()">Copy</button>
+    <div class="status" id="status">Trying to copy to clipboard...</div>
   </div>
 </body>
 </html>
