--- a/lua/luapack.html
+++ b/lua/luapack.html
@@ -72,7 +72,7 @@
     const githubUser = "KayaHvH";
     const repo = "Configs";
     const branch = "main";
-    const folder = "lua";
+    const folder = "lua/luapack";
 
     async function loadLuaPack() {
       const fileList = document.getElementById("file-list");
@@ -116,7 +116,7 @@
   <div class="container">
     <h1>LuaPack Downloads</h1>
     <ul id="file-list"></ul>
-    <div class="note">Click to download any Lua script.</div>
+    <div class="note">Click to download any Lua script from /lua/luapack.</div>
     <div class="error" id="error"></div>
   </div>
 </body>
